@@ -125,7 +125,6 @@ function frontend_revealAndExpandDataNodeInElementsPanel(testController)
 
 function frontend_loadDOM(testController)
 {
-    WebInspector.showPanel("elements");
     testController.waitUntilDone();
     // Need test to be async to expand whole the tree first.
     try {
