@@ -1,5 +1,15 @@
 2010-08-09  Pavel Feldman  <pfeldman@chromium.org>
 
+        Not reviewed: Chromium tests fix.
+
+        Chromium: provisional interactive ui tests fix.
+
+        * src/js/Tests.js:
+        (.TestSuite.prototype.testShowStoragePanel.this):
+        (.TestSuite.prototype.testShowStoragePanel):
+
+2010-08-09  Pavel Feldman  <pfeldman@chromium.org>
+
         Not reviewed. Chromium tests fix.
 
         Disable runtime switch for device motion in chromium.
